# DepthFusion

./: CMakeLists.txt  README.md
include/se_orderbook/: AggregatedOrderBook.hpp  IOrderBook.hpp  NormalizedOrderUpdate.hpp  OrderBook.hpp  OrderBookSide.hpp  OrderEntry.hpp  Side.hpp  Tick.hpp
include/se_orderbook/core/: IFeedHandler.hpp  OrderBookManager.hpp
include/se_orderbook/feedhandlers/: BinanceFeedHandler.hpp  KrakenFeedHandler.hpp
include/se_orderbook/parsers/: BinanceDepthParser.hpp  KrakenDepthParser.hpp
include/se_orderbook/websocket/: BinanceWebSocketClient.hpp  IWebSocketClient.hpp  KrakenWebSocketClient.hpp
src/: main.cpp
src/core/: OrderBookManager.cpp
src/feedhandlers/: BinanceFeedHandler.cpp  KrakenFeedHandler.cpp
src/orderbook/: AggregatedOrderBook.cpp  OrderBook.cpp  OrderBookSide.cpp
src/parsers/: BinanceDepthParser.cpp  KrakenDepthParser.cpp
src/utils/: SymbolNormaliser.hpp
src/websocket/: BinanceWebSocketClient.cpp  KrakenWebSocketClient.cpp
tests/: AggregatedOrderBookAggregationTest.cpp  AggregatedOrderBookTest.cpp  BinanceDepthParserTest.cpp  CMakeLists.txt  OrderBookManagerTest.cpp  OrderBookTest.cpp
